# upstox-ready-algo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.ps1
.github/workflows/: ci.yml
algo/: __init__.py  auth.py  config.py  market_data.py  orders.py  portfolio.py  strategy.py
chat_logs/: chat_history.csv  chat_history_hourly.xlsx
deploy/: run_live.ps1  run_live.sh
docs/: chat-history-excel.md  isaac_ros2_pick_place_quickstart.md
src/upstox_ready_algo/: cli.py  config.py  engine.py  metrics.py  models.py  risk.py  storage.py
src/upstox_ready_algo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/upstox_ready_algo/broker/: base.py  paper.py  upstox_live.py
src/upstox_ready_algo/data/: simulated.py  upstox_ltp.py
src/upstox_ready_algo/ros2/: __init__.py  isaac_bridge_node.py
src/upstox_ready_algo/strategy/: moving_average.py
tests/: test_market_data.py  test_metrics.py  test_orders.py  test_strategy.py
tools/: chat_log_and_export.ps1  chat_to_excel_hourly.py  check_cuda_readonly.ps1  launch_isaacsim_plain.ps1  launch_isaacsim_ros2.ps1  repair_nvidia_cuda.ps1  run_isaacsim_ros2_sample.py
tools/ros2_pick_place/: camera_target_detector.py  mock_arm_executor.py  moveit_pose_bridge.py  pick_place_coordinator.py  pick_place_pipeline.launch.py  run_pick_place_mock.ps1  run_pick_place_moveit.ps1
